@@ -5580,6 +5580,30 @@ literal|true
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|boolean
+name|isLive
+init|=
+name|zkStateReader
+operator|.
+name|getClusterState
+argument_list|()
+operator|.
+name|getLiveNodes
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+name|replica
+operator|.
+name|getNodeName
+argument_list|()
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|isLive
+condition|)
+block|{
 name|sendShardRequest
 argument_list|(
 name|replica
@@ -5599,6 +5623,7 @@ name|get
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
 name|Callable
 argument_list|<
 name|Boolean
@@ -5609,6 +5634,11 @@ parameter_list|()
 lambda|->
 block|{
 try|try
+block|{
+if|if
+condition|(
+name|isLive
+condition|)
 block|{
 name|processResponses
 argument_list|(
@@ -5647,6 +5677,7 @@ name|Boolean
 operator|.
 name|TRUE
 return|;
+block|}
 comment|// try and ensure core info is removed from cluster state
 name|deleteCoreNode
 argument_list|(
